java_console: fix PCAN connectivity on Windows (detection, port surface, ISO-TP decode)
- PowerShell hardware probes (PCAN/DFU/ST-Link) now run as -EncodedCommand arg lists via the new ExecHelper.executeCommand(List<String>, ...) overload: Runtime.exec(String) shredded the WQL -Filter quotes, so detection silently matched nothing (PCANConnected always false)
- Surface the PCAN adapter as a synthetic CAN port in SerialPortScanner; LinkManager turns PCanIoStream init failures into an exception carrying the real TPCANStatus instead of the generic "Failed to open port"
- Fix 'No signature returned by PCanIoStream' on CAN-only ECUs (m74_9): decodePacket got the 127-byte TPCANMsg buffer length instead of the actual DLC, so ISO-TP assembly and CRC validation read zero padding. Use the size-aware decodePacket(data, rx.getLength())
- Fix INFO_SKIP_RATE typo (3-00 evaluated to 3) that flooded the log with skipped-packet lines
- UiVersion.CONSOLE_VERSION bumped to 20260809